--- a/makethon.html
+++ b/makethon.html
@@ -140,7 +140,7 @@
           <hr>
             <h1>THANYAA S</h1>
             
-            <h3>Bengaluru-560093 | 7019472480 | thanyaas.btech23@rvu.edu.in</h3>
+            <h3>Bengaluru-577548 | 7010472400 | thanyaa.btech23@rvu.edu.in</h3>
             <br>
             <div>
             <p>Aspiring college graduate specializing in computer science and front-end development.<br>And keen interest towards the development of robots.<br>Intellectual thinking towards problem and interactive communication among peers.</p>
